--- a/packages/homebrew/install
+++ b/packages/homebrew/install
@@ -7,3 +7,5 @@ if [[ ! $(which brew) ]]; then
   sudo --validate # reset `sudo` timeout to use Homebrew install in noninteractive mode
   NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
 fi
+
+brew update
