fix: update homebrew install for mac/linux

--- a/packages/homebrew/install
+++ b/packages/homebrew/install
@@ -1,11 +1,11 @@
 #!/usr/bin/env bash
 
 if [[ ! $(which brew) ]]; then
-  export HOMEBREW_CASK_OPTS="--appdir=/Applications"
-
-  info "Installing homebrew..."
-  sudo --validate # reset `sudo` timeout to use Homebrew install in noninteractive mode
-  NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+  if [[ $(uname) == "Darwin" ]]; then
+    source "$PACKAGES_DIR/homebrew/distros/macos.sh"
+  else
+    source "$PACKAGES_DIR/homebrew/distros/linux.sh"
+  fi
 fi
 
 brew update
