--- a/packages/xcode/install
+++ b/packages/xcode/install
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 
+# Ensure we have xcode tools for mac
 if ! xcode-select -p >/dev/null; then
   xcode-select --install
   sudo xcodebuild -license accept
